client/style.css
*{
    margin: 0;
    padding: 0%;
    box-sizing: border-box;
}

/* body{
    /* background-color: black;
} */

header {
/* added new style  */
    width: 100%vw;
}

/* NAVIGATION AREA  */
.Nav-background{
    height: 10%;
}
nav{
    /* added styling  */
    /* width: 100%vw; */
    padding-top: 20px;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}
nav ul{
    display: flex;
    text-decoration: none;
    list-style: none;
    margin-right: 13em;
}
nav li a {
    text-decoration: none;
    padding: 30px;
    color: #FFF;
    font-family: DM Sans;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 70.187%; /* 12.634px */
}
#THELOGO{
    margin-right: 12em;
    /* Added new style  */
    max-width: 100px;
}
.Nav-background{
position: relative;
z-index: -10;
bottom: 5em;
width: 200px; 
height: 200px; 
overflow: hidden; 
}
.Nav-background{
/* Added new style  */
/* width: 100%vw; */
position: relative;
z-index: -10;
bottom: 5em;
width: 200px; 
height: 200px; 
overflow: hidden; 

width: 100%; /* Make the image fill the container */
  height: 100%; /* Make the image fill the container */
  object-fit: cover; /* Crop the image to cover the container while maintaining aspect ratio */
}
.Nav-line{
margin-left: auto;
margin-right: auto;
position: relative;
top: 10px;
width: 1015px;
height: 0.5px;
z-index: 10;
background: #FFF;
}
.Hero-content{
    width: 100%vw;
    margin-top: 8em;
    display: flex;
    position: absolute;
}
.Hero-content h1{
    position: relative;
    top: 1em;
    left: 4.4em;
    width: 584px;
    text-align: left;
    color: #FFF;
    font-family: Inter;
    font-size: 47px;
    font-style: normal;
    font-weight: 700;
    line-height: 55px; /* 134.615% */
    letter-spacing: -1px;
    text-transform: capitalize;
}
.Nav-map{
    position: absolute;
    left: 52.5em;
    top: -3em;
}
.Hero-option{
justify-content: center;
align-items: center;
display: flex;
margin-left: 17px;
text-align: center;
width: 378px;
height: 58px;
flex-shrink: 0;
border-radius: 10px;
border: 1px solid rgba(0, 0, 0, 0.20);
background: #FFF;

padding-top: 13px;
padding-bottom: 13px;
}
.Hero-option .Button1  > button{
display: flex;
width: 128px;
height: 35px;
padding: 15px 26px 15px 23px;
justify-content: center;
align-items: center;
gap: 12px;
flex-shrink: 0;

border-radius: 5px 0px 0px 5px;
border: 1px solid #E6E6E6;
background: #F9F9F9;
}
.Hero-option .Button2  > button{
display: flex;
width: 176px;
height: 35px;
padding: 15px 17px 15px 23px;
justify-content: flex-end;
align-items: center;
gap: 22px;
flex-shrink: 0;

border: 1px solid #E6E6E6;
background: #F9F9F9;
}
.Hero-option .Button3  > button {
display: flex;
width: 59.001px;
height: 35px;
padding: 19px 19.422px 19px 19.578px;
justify-content: center;
align-items: center;
flex-shrink: 0;

border-radius: 0px 5px 5px 0px;
border: 1px solid #E6E6E6;
background: var(--primary-color, #23A6F0);
}

/* FIRST MAIN CONTENT  */
main{
/* added new style  */
    width: 100%vw;
    margin-top: -3em;
    padding: 20px 20px;
    margin-left: 80px;
    margin-right: 80px;
}
main h1{
margin-left: 100px;
color: var(--text-gray-900, #18191F);
font-feature-settings: 'salt' on, 'liga' off;
font-family: Inter;
font-size: 26px;
font-style: normal;
font-weight: 800;
line-height: 64px; /* 177.778% */
text-transform: capitalize;
}
main > svg{
    position: absolute;
    left: 200px;
    margin-top: -10px;
}
main  img{
    margin-left: 40px;
}

/* THE COST INNER SECTION  */
.Living-cost-area{
    /* added new style  */
    /* width: 100%vw; */
    padding: 30px;
    position: absolute;
    top: 120%;
    left: 40%;
}
.cost-text{
position: relative;
top: -10%;
left: 37%;
}
.Cost1{
    position: relative;
    display: flex;
}
.Thesvg1 svg{
    position: relative;
    top: 4.5em;
    left: 48%;
    /* z-index: 2; */
}
.Thesvg2 svg{
    position: relative;
    top: 4.5em;
    left: 47%;
}
.Thesvg3 svg{
    position: relative;
    top: 4.5em;
    left: 38%;
}
.Thesvg4 svg{
    position: relative;
    top: 4.5em;
    left: 48%;
}
.Thesvg5 svg{
    position: relative;
    top: 4.3em;
    left: 48%;
}
.Thesvg6 svg {
    position: relative;
    top: 4.5em;
    left: 48%;
}
.cost-text{
color: var(--text-gray-900, #18191F);
font-feature-settings: 'salt' on, 'liga' off;
font-family: Inter;
font-size: 16px;
font-style: normal;
font-weight: 600;
line-height: 25px; /* 134.615% */
text-transform: capitalize;
}

/* THE LIST OF PROPERTIES SECTION  */
.List-of-properties{
    /* added new style  */
    /* width: 100%vw; */
    background: #F5F5F5;
}
.AREAONE:hover{
    transform: translate(0,-4px);
}
.Area1{
    padding: 20px 20px;
    margin-left: 80px;
    margin-right: 80px;
    display: flex;
}
.Area1-svg{
    position: relative;
    left: 5em;
    top: -55px;
    padding: 20px 20px;
    margin-left: 80px;
    margin-right: 80px;
    display: flex;
}
.Area1 button{
cursor: pointer;
position: relative;
left: 65em;
margin-top: 7px;
width: 120px;
height: 45px;
flex-shrink: 0;
border-radius: 5px;
background: #F4511E;
border: none;
box-shadow: 0px 1.852px 3.148px 0px rgba(248, 90, 71, 0.02), 0px 8.148px 6.519px 0px rgba(248, 90, 71, 0.03), 0px 20px 13px 0px rgba(248, 90, 71, 0.04);

color: #FFF;
text-align: center;
font-family: Manrope;
font-size: 12px;
font-style: normal;
font-weight: 500;
line-height: normal;
}
.Area1 h1{
position: relative;
left: 80px;
color: var(--text-gray-900, #18191F);
font-feature-settings: 'salt' on, 'liga' off;
font-family: Inter;
font-size: 26px;
font-style: normal;
font-weight: 800;
line-height: 64px; /* 177.778% */
text-transform: capitalize;
}
.Area2{
/* display: grid;
grid-template-columns: 300px 300px 300px ;
column-gap: 20px; */
flex-direction: row;
position: relative;
left:   8.5em;
display: flex;
padding: 20px 20px;
margin-left: 80px;
margin-right: 80px;
}
/* ... */

